--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "require-dev": {
         "mockery/mockery": "^1.4.4",
         "phpunit/phpunit": "^9.5",
-        "orchestra/testbench": "^6.0"
+        "orchestra/testbench": "^6|^7"
     },
     "license": "MIT",
     "scripts": {
