--- a/.gitattributes
+++ b/.gitattributes
@@ -4,5 +4,5 @@
 /tests export-ignore
 .gitattributes export-ignore
 .gitignore export-ignore
-composer.lock
+composer.lock export-ignore
 phpunit.xml export-ignore
